<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/calculadora_ibc" />

        <TextView
            android:id="@+id/tvHeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadura_m" />

        <EditText
            android:id="@+id/etHeightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:layout_marginBottom="25dp"
            android:hint="@string/ejemplo_1_75m"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tvWeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso_kg" />

        <EditText
            android:id="@+id/etWeightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_75kg"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:layout_gravity="center"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/calcular" />

        <TextView
            android:id="@+id/tvResultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginBottom="20sp"
            android:layout_gravity="center"
            android:text="@string/resultado_imc" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="italic"
            android:text="@string/no_calculado"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>